css/preview.css
.wireframe {
  background-color: #2e4057;
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
}

.wireframe .div {
  background-color: #2e4057;
  overflow: hidden;
  width: 1440px;
  height: 1024px;
  position: relative;
}

.wireframe .div-homepage-welcome {
  display: flex;
  flex-direction: column;
  width: 950px;
  align-items: center;
  gap: 40px;
  position: absolute;
  top: 248px;
  left: 245px;
}

.wireframe .heading {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0px 215.9px 0px 216.1px;
  position: relative;
  align-self: stretch;
  width: 100%;
  flex: 0 0 auto;
}

.wireframe .track-music-you-ve {
  position: relative;
  width: fit-content;
  margin-top: -1px;
  margin-left: -42.5px;
  margin-right: -42.5px;
  font-family: "Yrsa-Regular", Helvetica;
  font-weight: 400;
  color: #c9c5cb;
  font-size: 48px;
  text-align: center;
  letter-spacing: 0;
  line-height: 48px;
}

.wireframe .overlap {
  position: absolute;
  width: 1920px;
  height: 75px;
  top: 0;
  left: -240px;
}

.wireframe .rectangle {
  position: absolute;
  width: 1440px;
  height: 75px;
  top: 0;
  left: 240px;
  box-shadow: 0px 4px 4px #00000040;
}

.wireframe .header {
  display: flex;
  flex-direction: column;
  width: 1920px;
  height: 72px;
  align-items: center;
  padding: 0px 485px;
  position: absolute;
  top: 3px;
  left: 0;
  background-color: transparent;
}

.wireframe .div-site-header-bg {
  position: absolute;
  width: 1920px;
  height: 95px;
  top: 0;
  left: 0;
  background: linear-gradient(
    180deg,
    rgb(20, 24, 28) 0%,
    rgba(20, 24, 28, 0.94) 16.56%,
    rgba(20, 24, 28, 0.8) 30.85%,
    rgba(20, 24, 28, 0.61) 43.77%,
    rgba(20, 24, 28, 0.39) 56.23%,
    rgba(20, 24, 28, 0.2) 69.15%,
    rgba(20, 24, 28, 0.05) 83.44%,
    rgba(20, 24, 28, 0) 100%
  );
  opacity: 0.7;
}

.wireframe .section {
  display: flex;
  flex-direction: column;
  width: 950px;
  height: 72px;
  align-items: flex-start;
  padding: 22px 677px 25px 0px;
  position: relative;
}

.wireframe .text-wrapper {
  position: relative;
  width: 120px;
  height: 23px;
  margin-top: -1px;
  font-family: "Secular One-Regular", Helvetica;
  font-weight: 400;
  color: #ffffff;
  font-size: 30px;
  letter-spacing: 1px;
  line-height: 17px;
}

.wireframe .nav {
  display: flex;
  flex-direction: column;
  width: 496px;
  align-items: flex-start;
  position: absolute;
  top: 22px;
  left: 299px;
}

.wireframe .list {
  display: flex;
  align-items: flex-start;
  gap: 15px;
  padding: 0px 7.63e-6px 0px 0px;
  position: relative;
  align-self: stretch;
  width: 100%;
  flex: 0 0 auto;
}

.wireframe .item-link {
  display: flex;
  flex-direction: column;
  width: 57.45px;
  align-items: flex-start;
  padding: 6px 2.45px 0px 0px;
  position: relative;
}

.wireframe .text-wrapper-2 {
  position: relative;
  width: fit-content;
  margin-top: -1px;
  font-family: "Inter-Regular", Helvetica;
  font-weight: 400;
  color: #d8e0e8;
  font-size: 13px;
  letter-spacing: 1px;
  line-height: 17px;
  white-space: nowrap;
}

.wireframe .create-account-wrapper {
  width: 135.19px;
  padding: 6px 4.19px 0px 0px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  position: relative;
}

.wireframe .films-wrapper {
  width: 44.83px;
  padding: 6px 1.83px 0px 0px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  position: relative;
}

.wireframe .lists-wrapper {
  width: 41.3px;
  padding: 6px 1.3px 0px 0px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  position: relative;
}

.wireframe .members-wrapper {
  width: 72.75px;
  padding: 6px 2.75px 0px 0px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  position: relative;
}

.wireframe .journal-wrapper {
  width: 69.48px;
  padding: 6px 2.48px 0px 0px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  position: relative;
}

.wireframe .section-2 {
  position: absolute;
  width: 950px;
  height: 255px;
  top: 556px;
  left: 245px;
}

.wireframe .tunify-lets-you-wrapper {
  display: flex;
  flex-direction: column;
  width: 950px;
  align-items: flex-start;
  padding: 0px 775px 0px 0px;
  position: absolute;
  top: 0;
  left: 0;
}

.wireframe .tunify-lets-you {
  position: relative;
  width: fit-content;
  margin-top: -1px;
  font-family: "Inter-Regular", Helvetica;
  font-weight: 400;
  color: #99aabb;
  font-size: 12.6px;
  letter-spacing: 0.98px;
  line-height: 20px;
  white-space: nowrap;
}

.wireframe .div-highlights {
  position: absolute;
  width: 950px;
  height: 225px;
  top: 30px;
  left: 0;
}

.wireframe .link-margin {
  display: flex;
  flex-direction: column;
  width: 310px;
  align-items: flex-start;
  padding: 0px 0px 10px;
  position: absolute;
  top: -3px;
  left: 0;
}

.wireframe .link {
  position: relative;
  align-self: stretch;
  width: 100%;
  height: 102px;
  background-color: #445566;
  border-radius: 3px;
  box-shadow: inset 0px 1px 0px #ffffff1a;
}

.wireframe .p {
  display: flex;
  flex-direction: column;
  width: 205px;
  align-items: flex-start;
  padding: 5px 1px 0px 0px;
  position: relative;
  top: 15px;
  left: 53px;
}

.wireframe .text-wrapper-3 {
  position: relative;
  width: fit-content;
  margin-top: -1px;
  font-family: "Inter-Regular", Helvetica;
  font-weight: 400;
  color: #ddeeff;
  font-size: 14px;
  letter-spacing: 0;
  line-height: 21px;
}

.wireframe .link-wrapper {
  top: -3px;
  left: 320px;
  display: flex;
  flex-direction: column;
  width: 310px;
  align-items: flex-start;
  padding: 0px 0px 10px;
  position: absolute;
}

.wireframe .show-some-love-for-wrapper {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 5px 2px 0px 0px;
  top: 15px;
  left: 53px;
  width: 205px;
  position: relative;
}

.wireframe .div-wrapper {
  top: -3px;
  left: 640px;
  display: flex;
  flex-direction: column;
  width: 310px;
  align-items: flex-start;
  padding: 0px 0px 10px;
  position: absolute;
}

.wireframe .write-and-share-wrapper {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 5px 13px 0px 0px;
  top: 17px;
  left: 52px;
  width: 205px;
  position: relative;
}

.wireframe .link-margin-2 {
  top: 109px;
  left: 0;
  display: flex;
  flex-direction: column;
  width: 310px;
  align-items: flex-start;
  padding: 0px 0px 10px;
  position: absolute;
}

.wireframe .p-wrapper {
  position: relative;
  align-self: stretch;
  width: 100%;
  height: 103px;
  background-color: #445566;
  border-radius: 3px;
  box-shadow: inset 0px 1px 0px #ffffff1a;
}

.wireframe .rate-each-film-on-a-wrapper {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 5px 17px 0px 0px;
  top: 14px;
  left: 54px;
  width: 205px;
  position: relative;
}

.wireframe .link-margin-3 {
  top: 109px;
  left: 320px;
  display: flex;
  flex-direction: column;
  width: 310px;
  align-items: flex-start;
  padding: 0px 0px 10px;
  position: absolute;
}

.wireframe .overlap-group-wrapper {
  height: 69px;
  top: 15px;
  left: 53px;
  width: 205px;
  position: relative;
}

.wireframe .overlap-group {
  position: relative;
  width: 192px;
  height: 64px;
  top: 3px;
}

.wireframe .keep-a-diary-of-your {
  position: absolute;
  height: 63px;
  top: 0;
  left: 0;
  font-family: "Inter-Regular", Helvetica;
  font-weight: 400;
  color: transparent;
  font-size: 14px;
  letter-spacing: 0;
  line-height: 21px;
}

.wireframe .span {
  color: #ddeeff;
}

.wireframe .text-wrapper-4 {
  color: #ffffff;
}

.wireframe .text-wrapper-5 {
  position: absolute;
  height: 21px;
  top: 43px;
  left: 23px;
  font-family: "Inter-Regular", Helvetica;
  font-weight: 400;
  color: #ddeeff;
  font-size: 14px;
  letter-spacing: 0;
  line-height: 21px;
  white-space: nowrap;
}

.wireframe .link-margin-4 {
  top: 109px;
  left: 640px;
  display: flex;
  flex-direction: column;
  width: 310px;
  align-items: flex-start;
  padding: 0px 0px 10px;
  position: absolute;
}

.wireframe .compile-and-share-wrapper {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 5px 12px 0px 0px;
  top: 14px;
  left: 52px;
  width: 205px;
  position: relative;
}

.wireframe .overlap-2 {
  position: absolute;
  width: 336px;
  height: 48px;
  top: 429px;
  left: 552px;
}

.wireframe .img {
  position: absolute;
  width: 336px;
  height: 45px;
  top: 3px;
  left: 0;
}

.wireframe .text-wrapper-6 {
  position: absolute;
  height: 48px;
  top: 0;
  left: 75px;
  font-family: "Work Sans-Regular", Helvetica;
  font-weight: 400;
  color: #ffffff;
  font-size: 24px;
  text-align: center;
  letter-spacing: 0;
  line-height: 48px;
  white-space: nowrap;
}

